--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -21,6 +21,7 @@
 @import 'pages/login';
 @import 'pages/about';
 @import 'pages/help';
+@import 'pages/feedback';
 /* ==========================================================================
    Webfonts pages
    ========================================================================== */
