--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -1,10 +1,10 @@
 @import configuration.Config
 
-@main("Help") {
+@main("Help", htmlClass = "help") {
 
     @fragments.layout.sectionHeader("Help")
 
-    <div class="help-container">
+    <div class="info-container">
 
         <h2 class="section-body-headline">Guardian membership FAQ</h2>
         <div class="help-intro">
@@ -30,13 +30,12 @@
             <li><a class="u-underline" href="#do-not-live-in-uk">I don’t live in the UK - can I still be a member?</a></li>
             <li><a class="u-underline" href="#change-membership-tier">What happens if I want to change my membership tier?</a></li>
             <li><a class="u-underline" href="#cancel-membership">What happens if I want to cancel my membership?</a></li>
-            <li><a class="u-underline" href="#have-a-question">I've got a question</a></li>
             <li><a class="u-underline" href="#feedback-about-membership">I've got feedback about membership</a></li>
             <li><a class="u-underline" href="#personal-data-protection">How do I know you are protecting my personal information?</a></li>
             <li><a class="u-underline" href="#terms-conditions-of-membership">What are the terms and conditions of membership?</a></li>
             <li><a class="u-underline" href="#wheelchair-access-for-venue">How can I find out about disabled/wheelchair access for the venue?</a></li>
-            <li><a href="#retrospective-discount-on-event">I’ve already bought a ticket to an event. If I become a member can I get a retrospective discount?</a></li>
-            <li><a href="#faq-not-listed">My question is not an FAQ listed above?</a></li>
+            <li><a class="u-underline" href="#retrospective-discount-on-event">I’ve already bought a ticket to an event. If I become a member can I get a retrospective discount?</a></li>
+            <li><a class="u-underline" href="#have-a-question">I've got a question</a></li>
         </ul>
 
 
@@ -120,11 +119,6 @@
             <p>You can cancel your membership after the first 12 months by following the instructions on this <a href="/tier/cancel" class="u-underline">page</a>. Your membership will run until the end of your current payment term.</p>
         </section>
 
-        <section class="help-faqs" id="have-a-question"> 
-            <h2 class="section-body-headline">I've got a question</h2>
-            <p>Please email <a href="mailto:membershipsupport@@theguardian.com" class="u-underline">membershipsupport@@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours.</p>
-        </section>
-
         <section class="help-faqs" id="feedback-about-membership"> 
             <h2 class="section-body-headline">I've got feedback about membership</h2>
             <p>Please fill in the feedback form on the site <a href="/feedback" class="u-underline">here</a>.</p>
@@ -150,13 +144,9 @@
             <p>Unfortunately we can’t offer retrospective discounts.</p>
         </section>
 
-        <section class="help-faqs" id="faq-not-listed">
-        <h2 class="section-body-headline">My question is not an FAQ listed above?</h2>
-            <p>Please contact our Customer Service Team<br />
-            Call us: 084 5712 3456<br />
-            email: <a href="mailto:membershipsupport@@theguardian.com" class="u-underline">membershipsupport@@theguardian.com</a><br />
-            Office hours from:  08:00 – 20:00 GMT Monday to Friday</p>
-            
+        <section class="help-faqs" id="have-a-question"> 
+            <h2 class="section-body-headline">I've got a question</h2>
+            <p>Please email <a href="mailto:membershipsupport@@theguardian.com" class="u-underline">membershipsupport@@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours.</p>
         </section>
 
     </div>
