copy changes from Julia

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -60,7 +60,7 @@
                     <h2 class="home-slice__headline">Membership fuels our journalism</h2>
                 </div>
                 <div class="home-slice__offset-copy">
-                    <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
+                    <blockquote class="home-slice__copy--quote">The Guardian’s only relationship is with our readers. We’re not a big corporate company. This relationship is special, and Membership is the place for us all to come together and discuss the issues of the day.</blockquote>
                     <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
                     <a class="action action--join" href="/patrons">Start your journey as Patron</a>
                 </div>
@@ -106,7 +106,7 @@
                     </p>
                     <p class="home-slice__copy">
                         Help to build and shape this community by joining as a Founding Partner or Patron,
-                        with the guarantee that the price you pay today will never rise.</p>
+                        with the guarantee that the price you pay today will not rise.</p>
                     <a class="action action--join" href="/join" id="qa-join">Join today</a>
                 </div>
             </div>
