--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -94,7 +94,7 @@
 
     <div class="home-slice home-slice--join-today">
         <div class="home-slice__inner u-cf">
-            <h2 class="home-slice__headline">Not ready for the Patron tier yet?<br />Join as a Friend or a Partner</h2>
+            <h2 class="home-slice__headline">Not ready to become a Patron yet?<br />Join as a Friend or a Partner</h2>
             <div class="join-today__join-boxes package-list package-list--bordered">
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=false, mode="promo")
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=false, mode="promo")
