--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -10,7 +10,7 @@
 
         @fragments.layout.sectionHeader("Are you sure?")
         <p>You will no longer receive all the great benefits</p>
-        <a href="/tier/change" class="action action--arrow-left action-cta action-cta--cancel">Back</a>
+        <a href="/tier/change" class="action action--arrow-left action-cta--confirm">Back</a>
 
         <div class="package-container">
             <div class="package-list">
