--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -20,7 +20,7 @@
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy"></p>
                 <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
-                <a class="action action--join home-slice__action action--secondary-button" href="/about">Learn more</a>
+                <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
                 <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
                     connects you to the conversations that matter and introduces you to fellow members who share
                     your interests.</p>
@@ -43,7 +43,7 @@
                 <p class="home-slice__copy">Members can attend events that take the power of open journalism
                     from print and digital into live experiences.
                 </p>
-                <a class="action action--secondary-button" href="/events">See our live events</a>
+                <a class="action action--join" href="/events">See our live events</a>
             </div>
         </div>
     </div>
