Made recommended tweaks

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -85,8 +85,7 @@
 
 .action--join,
 .action--logged-out,
-.action--logged-in,
-.js-ticket-cta {
+.action--logged-in {
     text-align: left;
     background-color: $mem-buttonBlue;
     color: $white;
