--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -13,7 +13,7 @@
         case SoldOut => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Sold Out</button> }
         case Cancelled => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Cancelled</button> }
         case PreLive => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Buy Tickets</button> }
-        case _ => { <a class='action js-ticket-cta' href='/event/@event.id/buy'>Buy Tickets</a> }
+        case _ => { <a class='action action--join js-ticket-cta' href='/event/@event.id/buy'>Buy Tickets</a> }
     }
 }
 
