--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -32,6 +32,7 @@
         <meta name="Rating"                         content="general"/>
         <meta name="Distribution"                   content="Global"/>
 
+        <meta name="google-site-verification" content="_NUisUl-ebru2EHJCXG4oFs1FfRcmFDDjWO9EfP4eX8" />
         <title>@(Config.siteTitle + " - " + title)</title>
         @fragments.javaScriptFirstSteps()
         <link rel="stylesheet" media="screen" href="@Asset.at("stylesheets/style.css")">
