that's so raven

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -46,7 +46,10 @@
         css: {
             loaded: false
         },
-        stripePublicKey: '@Config.stripeApiConfig.publicKey'
+        stripePublicKey: '@Config.stripeApiConfig.publicKey',
+        membership: {
+            buildNumber: '@app.BuildInfo.buildNumber'
+        }
     };
 
     (function(isModern) {
