add boolean for showing terms and conditions in submit template

--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -18,7 +18,7 @@
 
             @fragments.form.errorMessageDisplay()
             @fragments.form.feedback()
-            @fragments.form.submit("Send feedback now")
+            @fragments.form.submit("Send feedback now", showTermsAndConditions = false)
         </form>
 
     </div>
