--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -1,4 +1,5 @@
-@(ctaTextPrepend: String, ctaTextAppend: String = "", tier: Option[com.gu.membership.salesforce.Tier.Tier] = None)
+@(ctaTextPrepend: String, ctaTextAppend: String = "", tier: Option[com.gu.membership.salesforce.Tier.Tier] = None,
+    showTermsAndConditions: Boolean = true)
 
 @import views.support.Asset
 @import model.Benefits
@@ -8,8 +9,10 @@
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
 
-        <p>By joining Guardian Membership, you are agreeing to our <a href="http://www.theguardian.com/help/terms-of-service" target="_blank">terms and conditions</a> and <a href="http://www.theguardian.com/help/privacy-policy">Privacy
-            Policy</a>.</p>
+        @if(showTermsAndConditions){
+            <p>By joining Guardian Membership, you are agreeing to our <a href="http://www.theguardian.com/help/terms-of-service" target="_blank">terms and conditions</a> and <a href="http://www.theguardian.com/help/privacy-policy">Privacy
+                Policy</a>.</p>
+        }
 
         <div class="actions js-waiting-container">
             <button type="submit" class="submit-input action action--logged-in js-submit-input">
