--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -8,7 +8,7 @@
     <div class="info-container">
 
         <div class="feedback-intro">
-            <p>Help us improve our membership experience.  Use the form below to send us your comments or suggestions on Guardian membership. We'd like to hear it.</p>
+            <p>Help us improve your membership experience.  Use the form below to send us your comments or suggestions on Guardian membership. We'd like to hear it.</p>
             <p>We read all feedback carefully, but please note we cannot respond to all comments submitted.</p>
             <p>If you’re having any problems please visit our <a href="/help" class="u-underline">help section</a>.</p>
         </div>
@@ -18,7 +18,7 @@
 
             @fragments.form.errorMessageDisplay()
             @fragments.form.feedback()
-            @fragments.form.submit("Send feedback now", showTermsAndConditions = false)
+            @fragments.form.submit("Send feedback now", membershipTermsAndConditions = false)
         </form>
 
     </div>
