added markup for terms link

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -86,6 +86,7 @@
                                     </div>
                                 }
                             }
+                        <p class="terms-info">By proceeding, you agree to the Guardian Live events <a href="@Config.guardianLiveEventsTermsUrl" target="_blank">Terms and Conditions</a></p>
                             @ticketCta
                             <div class="ticket-info">
                                 <p>General release <strong><time class="js-ticket-sale-start" datetime="@event.ticketClassesHead.flatMap(_.sales_start).getOrElse("")">
