added styles for terms link

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -203,11 +203,18 @@ div.event {
     line-height: 0;
 }
 
+.terms-info,
 .ticket-info {
     @include fs-textsans(1);
     color: #878787;
     @include rem((
         margin-top: 8px
+    ));
+}
+
+.terms-info {
+    @include rem((
+        padding-top: $gs-baseline*2
     ));
 }
 
