Add arrow to Join today

--- a/frontend/assets/stylesheets/pages/_tickets.scss
+++ b/frontend/assets/stylesheets/pages/_tickets.scss
@@ -86,6 +86,14 @@
         border-color: $c-brandLightBlue;
     }
 
+    input[type=submit] {
+        @extend .icon-sprite-arrow-right-white;
+        height: auto;
+        @include rem((
+            background-position: 94% 9px!important
+        ));
+    }
+
 }
 
 .tickets__payment {
