changed button colours to primary colour

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -210,7 +210,7 @@
 }
 
 .action-cta--confirm {
-    background-color: $mem-button-confirm;
+    background-color: $mem-buttonBlue;
 }
 
 .action-cta--cancel {
