change copy on Help page

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -146,7 +146,7 @@
 
         <section class="help-faqs" id="have-a-question"> 
             <h2 class="section-body-headline">I've got a question</h2>
-            <p>Please email <a href="mailto:membershipsupport@@theguardian.com" class="u-underline">membershipsupport@@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours.</p>
+            <p>Please email <a href="mailto:membershipsupport@@theguardian.com" class="u-underline">membershipsupport@@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours. Alternatively, you can call the Guardian Membership customer services team on 0330 333 6898 from 8am to 5.30pm Monday to Friday and 8am to 12.30pm at weekends.</p>
         </section>
 
     </div>
