--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -11,8 +11,7 @@
     <div class="fieldset__fields">
 
         @if(membershipTermsAndConditions){
-            <p class="terms-info">By joining Guardian Membership, you are agreeing to our <a href="@Config.guardianMembershipTermsUrl" target="_blank">Terms and Conditions</a> and <a href="@Config.guardianPrivacyUrl">Privacy
-                Policy</a>.</p>
+            <p class="terms-info">By joining Guardian Membership, you are agreeing to our <a href="@Config.guardianMembershipTermsUrl" target="_blank">Terms and Conditions</a> and <a href="@Config.guardianPrivacyUrl" target="_blank">Privacy Policy</a>.</p>
         }
 
         <div class="actions js-waiting-container">
