--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -34,7 +34,7 @@
             <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
             <ul class="u-unstyled">
                 @for((header, body, icon) <- Benefits.details(tier).list) {
-                <li class="benefits-title">@header</li>
+                <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
                 <li class="benefits-copy">@body</li>
                 }
             </ul>
