--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -91,7 +91,7 @@
 
         <section class="help-faqs" id="I-do-not-want-weekly-email"> 
             <h2 class="section-body-headline">What happens if I don't want to receive the weekly email?</h2>
-            <p>If you don’t want to receive our weekly email newsletter, tick the unsubscribe link at the bottom of the email.</p>
+            <p>If you don’t want to receive our weekly email newsletter, click the unsubscribe link at the bottom of the email.</p>
         </section>
 
         <section class="help-faqs" id="under-18"> 
