pluralise tiers and add buttons to patrons page

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -43,9 +43,9 @@
                 <a class="action action-cta" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
                 @if(showLearnMore) {
                     @if(tier == Tier.Patron) {
-                        <a class="action action--secondary-button" href="/patrons">Learn more about @tier</a>
+                        <a class="action action--secondary-button" href="/patrons">Learn more about @{tier}s</a>
                     } else {
-                        <a class="action action--secondary-button" href="/about">Learn more about @tier</a>
+                        <a class="action action--secondary-button" href="/about">Learn more about @{tier}s</a>
                     }
                 }
             }
