possibly the most important change in the world

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -34,7 +34,7 @@
                         </li>
                         <li class="menu-item menu-item--last is-hidden js-header-join-us-cta">
                             <a href="/join" role="menuitem" class="no-underline hidden-mobile control__join-us" title="Join us">
-                                <span class="control"><i class="icon-sprite icon-sprite-g-black"></i></span>
+                                <span class="control control--no-border"><i class="icon-sprite icon-sprite-g-black"></i></span>
                                 <span class="control__info no-underline--override hidden-mobile">Join us</span>
                             </a>
                         </li>
@@ -85,7 +85,7 @@
                     <nav role="navigation" aria-label="@Config.siteTitle sections">
                         <div class="nav-popup__cta_container u-cf u-h js-sections-nav-join-us">
                             <a href="/join" role="menuitem" class="no-underline">
-                                <span class="control"><i class="icon-sprite icon-sprite-g-black"></i></span>
+                                <span class="control control--no-border"><i class="icon-sprite icon-sprite-g-black"></i></span>
                                 <span class="control__info no-underline--override">Join us</span>
                             </a>
                         </div>
