--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -1,12 +1,13 @@
 @import org.joda.time.DateTime
+@import configuration.Config
 <footer class="l-footer u-cf" data-link-name="footer" data-component="footer">
     <div class="l-footer__secondary gs-container" role="contentinfo">
         <ul class="colophon u-cf">
             <li class="colophon__item"><a data-link-name="help" href="/help">Help</a></li>
             <li class="colophon__item"><a data-link-name="contact" href="http://www.theguardian.com/help/contact-us">Contact us</a></li>
             <li class="colophon__item"><a data-link-name="feedback" href="/feedback">Feedback</a></li>
-            <li class="colophon__item"><a data-link-name="terms" href="http://www.theguardian.com/help/terms-of-service">Terms &amp; conditions</a></li>
-            <li class="colophon__item"><a data-link-name="privacy" href="http://www.theguardian.com/help/privacy-policy">Privacy policy</a></li>
+            <li class="colophon__item"><a data-link-name="terms" href="@Config.guardianMembershipTermsUrl">Terms &amp; conditions</a></li>
+            <li class="colophon__item"><a data-link-name="privacy" href="@Config.guardianPrivacyUrl">Privacy policy</a></li>
             <li class="colophon__item"><a data-link-name="cookie" href="http://www.theguardian.com/info/cookies">Cookie policy</a></li>
         </ul>
         <div class="l-footer__misc">
