fix display of event hero in ie9

--- a/frontend/assets/stylesheets/_ie9.scss
+++ b/frontend/assets/stylesheets/_ie9.scss
@@ -1,3 +1,18 @@
 .events-list .events-list__item {
     margin: 0 0 $gs-gutter 0 !important;
 }
+
+.event-item--hero {
+    .event-item__media {
+        width: 60%;
+        display: inline-block;
+    }
+
+    .event-item__meta {
+        width: 40%;
+        display: inline-block;
+        .event-item__cta {
+            position: static;
+        }
+    }
+}
