--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div>
-                                <a class='action action--join js-member-cta' href='/join'>Become a member</a>
+                                <a class='action js-member-cta' href='/join'>Become a member</a>
                             </div>
 
                             <div class="event__sale-ends">
