moved ie fixes to ie9 css

--- a/frontend/assets/stylesheets/_ie9.scss
+++ b/frontend/assets/stylesheets/_ie9.scss
@@ -1,3 +1,18 @@
 .events-list .events-list__item {
     margin: 0 0 $gs-gutter 0 !important;
 }
+
+.section-two-thirds {
+    .two-thirds {
+        @include mq(desktop) {
+            float: left;
+        }
+    }
+
+    .one-third {
+        @include mq(desktop) {
+            float: right;
+        }
+    }
+}
+
