--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -42,7 +42,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">The Guardian has no proprietor.  Our editor has total independence.</p>
-                <p class="home-slice__copy">The support of Patrons ensures that the Guardian remains standing witness to the world, without interference.</p>
+                <p class="home-slice__copy">The support of Patrons helps to ensure that the Guardian can stand witness to the world, without interference.</p>
             </div>
         </div>
     </div>
