--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -12,7 +12,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">Guardian Membership brings together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity to shape it.</p>
-                <p class="home-slice__copy">Join now as a Founding Partner or Patron and guarantee that the price you pay today will never rise.</p>
+                <p class="home-slice__copy">Join now as a Founding Partner or Patron and we guarantee that the price you pay today will not rise.</p>
                 <a class="action action--join" href="/join">Join today</a>
             </div>
         </div>
