removal of 12months in cancel section

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -116,7 +116,7 @@
 
         <section class="help-faqs" id="cancel-membership"> 
             <h2 class="section-body-headline">What happens if I want to cancel my membership?</h2>
-            <p>You can cancel your membership after the first 12 months by following the instructions on this <a href="/tier/cancel" class="u-underline">page</a>. Your membership will run until the end of your current payment term.</p>
+            <p>You can cancel your membership by following the instructions on this <a href="/tier/cancel" class="u-underline">page</a>. Your membership will run until the end of your current payment term.</p>
         </section>
 
         <section class="help-faqs" id="feedback-about-membership"> 
