fix mobile view

--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -172,6 +172,10 @@ body {
     }
 
     .one-third {
+        @include rem((
+            margin-bottom: $gs-gutter
+        ));
+        
         @include mq(tablet) {
             @include rem((
                 width: gs-span(4),
