updates to copy on thank you pages

--- a/frontend/app/views/fragments/layout/welcomeUser.scala.html
+++ b/frontend/app/views/fragments/layout/welcomeUser.scala.html
@@ -1,4 +1,4 @@
 <div class="user-welcome">
-    <p>Hello! thank you for signing up to Guardian membership, it's great to have you with us.</p>
-    <p>We've sent confirmation of your membership details to <span class="user-welcome__email js-user-email"></span>.</p>
+    <p>You're the newest member of our community. It's great to have you with us.</p>
+    <p>We've sent confirmation of your membership to <span class="user-welcome__email js-user-email"></span>.</p>
 </div>
