--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -7,7 +7,7 @@
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree = "")
-        @fragments.form.sectionHeading("Thank You")
+        @fragments.form.sectionHeading("Hello! Welcome to Guardian Membership")
         @fragments.layout.welcomeUser()
     </section>
 
