--- a/frontend/assets/stylesheets/pages/_browser-warning.scss
+++ b/frontend/assets/stylesheets/pages/_browser-warning.scss
@@ -10,7 +10,7 @@
 
 // hide the main BG image
 html.js-ancient-browser {
-    background: none;
+    background: none !important;
 }
 
 // show the upgrade message when browser isn't modern
