mobile nav scrolling

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -97,7 +97,7 @@
             </div>
         </div>
         <nav role="navigation" class="nav nav--global nav--global--header">
-            <div class="header__primary">
+            <div class="header__primary navigation__scroll">
                 <ul class="inline-list">
                     @fragments.nav(inlineMode=true)
                 </ul>
