--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -34,13 +34,20 @@
 }
 
 .nav--global {
-    display: none;
+    clear: both;
+    display: block;
+    width: 100%;
     overflow: hidden;
+    overflow-x: scroll;
+    @include fs-header(2);
     @include rem((
         padding: $gs-baseline/2 0,
         height: 44px
     ));
-    @include fs-header(2);
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     @include mq(tablet) {
         display: block;
@@ -71,6 +78,17 @@
     }
     .nav__link--last {
         margin-right: 0 !important;
+    }
+
+    .navigation__scroll {
+        @include rem((
+            width: 500px,
+            margin: 0 $gs-gutter/2
+        ));
+
+        @include mq(mobile) {
+            -webkit-overflow-scrolling: touch;
+        }
     }
 }
 
