--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -11,13 +11,13 @@
             <div class="header__primary">
                 <nav>
                     <ul class="inline-list u-cf" role="menubar">
-                        <li class="menu-item mobile-only">
+                        <!-- <li class="menu-item mobile-only">
                             <a href="#" role="menuitem" class="control js-menu-icon" title="Menu">
                                 <span class="control__icon">
                                     <i class="icon-sprite icon-sprite-menu-black"></i>
                                 </span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="menu-item">
                             <a href="@Config.idWebAppSigninUrl("")" role="menuitem" class="no-underline icon-wrapper js-identity-icon control__user-account" title="Your account">
                                 <span class="control">
@@ -95,6 +95,13 @@
                     </nav>
                 </div>
             </div>
+        </div>
+        <div class="mobile-menu mobile-only">
+            <a href="#" role="menuitem" class="mobile-menu__button js-menu-icon" title="Menu">
+                <span class="control__icon">
+                    <i class="icon-sprite icon-sprite-menu-white"></i>
+                </span>
+            </a>
         </div>
         <nav role="navigation" class="nav nav--global nav--global--header">
             <div class="header__primary navigation__scroll">
