added js hooks for billing address event listeners

--- a/frontend/app/views/fragments/form/billingAddress.scala.html
+++ b/frontend/app/views/fragments/form/billingAddress.scala.html
@@ -8,11 +8,11 @@
         <div class="fieldset__fields">
             <div class="form-field js-billing-address-container">
                 <label class="label" for="use-delivery-address">
-                    <input class="inside-radio" type="radio" name="address.type" id="use-delivery-address" value="true" checked="checked"/>
+                    <input class="inside-radio js-billing-input" type="radio" name="address.type" id="use-delivery-address" value="true" checked="checked"/>
                     <span class="payment-label__title">Use delivery address</span>
                 </label>
                 <label class="label" for="use-billing-address">
-                    <input class="inside-radio" type="radio" name="address.type" id="use-billing-address" value="false"/>
+                    <input class="inside-radio js-billing-input" type="radio" name="address.type" id="use-billing-address" value="false"/>
                     <span class="payment-label__title">Add a different billing address</span>
                 </label>
             </div>
