--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -49,6 +49,7 @@ $mq-breakpoints: (
     // Tweakpoints
     mobileLandscape: gs-span(6) + $gs-gutter, // 480px
 
+    // TODO-ben This has been added for a quick fix to do with a change in guss-grid-system
     leftCol:  gs-span(13) + $gs-gutter*2, // 1060px
 );
 
