Add image size/ratio settings to proper config location

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -48,7 +48,11 @@
         },
         stripePublicKey: '@Config.stripeApiConfig.publicKey',
         membership: {
-            buildNumber: '@app.BuildInfo.buildNumber'
+            buildNumber: '@app.BuildInfo.buildNumber',
+            eventImages: {
+                widths: [@Config.eventImageWidths.mkString(",")],
+                ratios: [@Config.eventImageRatios.mkString(",")]
+            }
         }
     };
 
