--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -1,11 +1,11 @@
-@()(implicit token: play.filters.csrf.CSRF.Token)
+@(pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import views.support.Asset
 @import helper._
 @import model.Benefits
 @import com.gu.membership.salesforce.Tier
 
-@main("Patrons", isBrochure = true, htmlClass = "patron-page") {
+@main("Patrons", isBrochure = true, htmlClass = "patron-page", pageInfo=pageInfo) {
 
     @* ===== Patron hero ===== *@
 
