--- a/frontend/assets/stylesheets/layout/_header.scss
+++ b/frontend/assets/stylesheets/layout/_header.scss
@@ -15,8 +15,8 @@ $header-margin: 36px;
         position: relative;
         background-color: transparentize($mem-blue, .2);
         @include rem((
-            padding-top: 10px,
-            padding-bottom: 5px
+            padding-top: 5px,
+            padding-bottom: 0
         ));
         @include mq($from: desktop) {
             @include side-margins-calc('padding-left');
