--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -57,6 +57,7 @@
     .nav__item {
         float: left;
     }
+
     .nav__link {
         position: relative;
         color: $black;
@@ -70,17 +71,26 @@
             margin-right: 26px;
         }
     }
-    .nav__link,
-    .nav__link:active,
-    .nav__link:focus,
-    .nav__link:hover {
-        text-decoration: none;
+
+    .nav__link {
+        &:link,
+        &:active {
+            text-decoration: none;
+            color: $black;
+        }
+
+        &:active,
+        &:focus,
+        &:hover {
+            text-decoration: underline;
+            color: $white;
+        }
+
+        &:active {
+            text-decoration: none;
+        }
     }
-    .nav__link:focus,
-    .nav__link:hover {
-        color: #ffffff !important;
-        text-decoration: underline;
-    }
+
     .nav__link--last {
         margin-right: 0 !important;
     }
@@ -93,6 +103,10 @@
 
         @include mq(mobile) {
             -webkit-overflow-scrolling: touch;
+        }
+
+        @include mq(tablet) {
+            width: 100%;
         }
     }
 }
@@ -166,7 +180,7 @@
         @include rem((
             padding: $gs-baseline 0
         ));
-        border-top: 1px solid lighten($c-neutral4, 8%);
+        border-bottom: 1px solid lighten($c-neutral4, 8%);
         height: auto;
         background-color: transparent;
         @include fs-header(1);
@@ -179,7 +193,12 @@
         }
         &:hover,
         &:focus {
-            color: $c-brandLightBlue;
+            text-decoration: underline;
+            // color: $c-brandLightBlue;
+        }
+
+        &:active {
+            text-decoration: none;
         }
     }
 }
@@ -200,9 +219,9 @@
     position: absolute;
     right: 0;
     background-color: lighten($black, 20%);
-    z-index: 1;
+    z-index: 3;
     @include rem((
-        top: 57px
+        top: 47px
     ));
 
     a.mobile-menu__button {
@@ -210,8 +229,8 @@
         display: block;
         text-decoration: none;
         @include rem((
-            padding: 3px 5px 9px 5px,
-            box-shadow: -2px 0px 5px $black
+            padding: 3px 9px 9px 9px,
+            box-shadow: -3px 0px 4px 0px rgba(50, 50, 50, .30)
         ));
     }
 }
